<resources>
    <string name="app_name">VKApp</string>


    <string name="price_example"><strike>$599</strike> </string>
    <string name="price_with_sale_example">$399</string>
    <string name="formatted_price">$%1$d</string>
    <string name="error_message_server">"Ошибка в запросе к серверу"</string>
    <string name="error_message_network">Произошла ошибка при загрузке данных,
проверьте подключение к сети!</string>


    //fragment_home
    <string name="back_page">back</string>
    <string name="next_page">next</string>
    <string name="search_icon">search_icon</string>
    <string name="category_title">all</string>


    //fragment_product
    <string name="arrow_sale">arrow_sale</string>
    <string name="rating_example">4.95</string>
    <string name="rating_icon">rating_icon</string>
    <string name="title_example">Iphone 9</string>
    <string name="back_fragment">back fragment</string>
    <string name="stock_example">95</string>
    <string name="percent_example">12</string>
    <string name="percent">%</string>
    <string name="vector">horizontal_vector</string>
    <string name="stock_txt">Stock:</string>
    <string name="description_example">An apple mobile which is nothing like apple</string>
    <string name="brand_txt">Brand</string>
    <string name="description_txt">Description</string>
    <string name="brand_example">An apple mobile which is nothing like apple An apple mobile which is nothing like apple An apple mobile which is nothing like apple An apple mobile which is nothing like apple An apple mobile which is nothing like apple An apple mobile which is nothing like apple</string>
    <string name="category_txt">Category</string>
    <string name="phone_example">Phone</string>
    <string name="btn_txt">BUY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repeat">Повторить</string>

</resources>