<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/image_slider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_230sdp"
                app:iss_auto_cycle="true"
                app:iss_corner_radius="15"
                app:iss_delay="1000"
                app:iss_period="1000"
                app:iss_text_align="CENTER"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_floating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_210sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:src="@drawable/arrow_back"
                app:backgroundTint="@color/white"
                app:layout_anchorGravity="bottom|end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/back_fragment"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/title_example"
                android:textColor="@color/black"
                android:textSize="@dimen/_24sdp"
                app:layout_constraintEnd_toStartOf="@+id/linearLayoutPrice"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_slider"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/linearLayoutPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutStock"
                android:visibility="gone">

                <TextView
                    android:id="@+id/price_real"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/price_example"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sdp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_marginEnd="@dimen/_2sdp"
                    android:src="@drawable/arrow_right"
                    android:contentDescription="@string/arrow_sale"/>

                <TextView
                    android:id="@+id/price_sale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_with_sale_example"
                    android:fontFamily="@font/montserrat_medium"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sdp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/back_rating"
                android:orientation="horizontal"
                android:padding="@dimen/_1sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/baseline_star_24"
                    android:contentDescription="@string/rating_icon" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="1sp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/rating_example"
                    android:textColor="@color/black"
                    android:padding="@dimen/_2sdp"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLayoutStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/back_rating"
                android:orientation="horizontal"
                android:padding="1dp"
                app:layout_constraintStart_toEndOf="@+id/linearLayoutRating"
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/stock_txt"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/stock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="1sp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/stock_example"
                    android:padding="@dimen/_2sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/back_rating_dark"
                android:orientation="horizontal"
                android:padding="1dp"
                app:layout_constraintStart_toEndOf="@+id/linearLayoutStock"
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/percent"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/sale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="1sp"
                    android:padding="@dimen/_2sdp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/percent_example"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/vector"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutPrice"
                android:contentDescription="@string/vector"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/description_txt"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vector"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_18sdp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/description_example"
                android:textColor="@color/gray"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_label"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/brand_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/brand_txt"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_18sdp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/brand_example"
                android:textColor="@color/gray"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/brand_label"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/category_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/category_txt"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/brand"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_70sdp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/phone_example"
                android:textColor="@color/gray"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/category_label"
                android:visibility="gone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>
    <ImageView
        android:id="@+id/image_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/not_connection"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/message_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_error"
        android:layout_margin="@dimen/_8sdp"
        android:visibility="gone"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btn_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/repeat"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_error"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>