<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/linear_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/category_title"
                    android:text="@string/category_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="@dimen/_24ssp"
                    android:textColor="@color/black"
                    android:layout_weight="3"
                    android:visibility="gone"/>

                <ImageView
                    android:id="@+id/img_search"
                    android:layout_width="@dimen/_24ssp"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/search_icon"
                    android:contentDescription="@string/search_icon"
                    android:visibility="gone"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/image_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/not_connection"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/message_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_error"
                android:layout_margin="@dimen/_8sdp"
                android:visibility="gone"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/btn_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:text="Повторить"
                android:layout_marginTop="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/message_error"
                android:visibility="gone"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_header"
                android:layout_margin="@dimen/_8sdp"
                android:orientation="horizontal" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="@dimen/_8sdp"
                app:layout_constraintTop_toBottomOf="@+id/rec_category" />

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rec_all">

                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/back_page"
                    android:src="@drawable/arrow_back"
                    android:visibility="gone"/>

                <ImageView
                    android:id="@+id/btn_next"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/next_page"
                    android:src="@drawable/arrow_next"
                    android:visibility="gone"/>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>